<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <!-- SDK -->
    <string name="app_name">GREE Platform Sample</string>
    <string name="get_session">Get session ID</string>
    <string name="show_share_dialog">Show Share Dialog</string>
    <string name="show_share_noclose_dialog">Show Noclose Share Dialog</string>
    <string name="show_share_mini_dialog">Show Mini Share Dialog</string>
    <string name="show_invite_popup">Show Invite Popup</string>
    <string name="update_session">Update session ID</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading</string>
    <string name="loading_data">Loading data..</string>
    <string name="all_data_loaded">All Data loaded</string>
    <string name="sync_failed">Failed To Get Data</string>
    <string name="taking_snapshot">Taking snapshot, waiting</string>
    <string name="list_arrow"  translatable="false">list_arrow</string>

    <!-- Profile -->
    <string name="load_profile_data_failed">Load profile data failed</string>
    <string name="load_profile_icon_failed">Load profile icon failed</string>
    <string name="not_login">Not Logged in</string>
    <string name="login">Login</string>
    <string name="please_login">Please Login</string>

    <!-- Root Page -->
    <string name="leaderboard_title">LeaderBoards</string>
    <string name="achievement_title">Achievements</string>
    <string name="share_title">Share</string>
    <string name="requests_title">Requests</string>
    <string name="invite_title">Invites</string>
    <string name="friends_title">Friends</string>
    <string name="payment_title">Payment</string>
    <string name="gltest_title">GLTest</string>
    <string name="activity_title">Activity</string>
    <string name="upgrade_title">Upgrade</string>

    <!-- achievement page -->
    <string name="unlocked" translatable="false">Unlocked</string>
    <string name="unlock_me" translatable="false">Unlock</string>
    <string name="lock_me" translatable="false">Lock</string>
    <string name="achievement_unlocked">Achievement unlocked!</string>
    <string name="failed_to_unlock_achievement">Failed to Unlock the Achievement</string>
    <string name="achievement_locked">Achievement Locked</string>
    <string name="failed_to_lock_achievement">Failed to Lock Achievement</string>

    <!-- high score page -->
    <string name="get_rankings_failed">Get Rankings failed</string>
    <string name="total">Total</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="friends" translatable="false">Friends</string>
    <string name="everyone" translatable="false">Everyone</string>
    <string name="my_score">Score:</string>
    <string name="get_profile_score_fail">Get User Score Failed</string>
    <string name="set_new_score_popout_title">Please set the new score..</string>
    <string name="set_new_score_post">Posting new score</string>
    <string name="set_new_score_success">Score update Success</string>
    <string name="set_new_score_fail">Score update Failed</string>
    <string name="set_new_score_cancel">Score update Canceled</string>

    <!-- payment page -->
    <string name="add_item" translatable="false">Add Item</string>
    <string name="show_popup" translatable="false">Show Popup</string>
    <string name="message" translatable="false">message</string>
    <string name="items_queued_for_purchase" translatable="false">Items queued for purchase (hold to remove)</string>
    <string name="payment_id" translatable="false">paymentId</string>
    <string name="verify" translatable="false">verify</string>
    <string name="add" translatable="false">Add</string>
    <string name="description" translatable="false">description</string>
    <string name="item_name" translatable="false">itemName</string>
    <string name="unit_price" translatable="false">unitPrice</string>
    <string name="quantity" translatable="false">quantity</string>
    <string name="image_url" translatable="false">imageUrl</string>
    <string name="item_id" translatable="false">itemId</string>

    <!-- request page -->
    <string name="set_request_message" translatable="false">Send Request Message</string>
    <string name="title_colon" translatable="false">Title:</string>
    <string name="body_colon" translatable="false">Body :</string>
    <string name="image_url_colon" translatable="false">ImageURL :</string>
    <string name="callback_url_colon" translatable="false">CallbackURL :</string>
    <string name="attrs_colon" translatable="false">Attrs :</string>
    <string name="attr_key1_colon" translatable="false">[ Key Name1 ]</string>
    <string name="attr_value1_colon" translatable="false">[ Value1 ]</string>
    <string name="attr_key2_colon" translatable="false">[ Key Name2 ]</string>
    <string name="attr_value2_colon" translatable="false">[ Value2 ]</string>
    <string name="attr_key3_colon" translatable="false">[ Key Name3 ]</string>
    <string name="attr_value3_colon" translatable="false">[ Value3 ]</string>
    <string name="all_users" translatable="false">All Users</string>
    <string name="app_owners" translatable="false">App Owners</string>
    <string name="show_request_popup" translatable="false">Show Request Popup</string>
    <string name="request_title_hint">Input Title</string>
    <string name="request_body_hint">Input Message</string>
    <string name="request_image_hint">Input ImageURL</string>
    <string name="request_callback_hint">Input Callback URL</string>

    <!-- share page -->
    <string name="attach_screenshot" translatable="false">Attach Screenshot?</string>

    <!-- friends page -->
    <string name="no_friends">No Friends, please add more</string>

    <!-- upgrade page -->
    <string name="upgrade_button_text">Upgrade</string>
    <string name="current_grade_prefix">Current Grade</string>
    <string name="grade_2">Upgrade to Grade 2</string>
    <string name="grade_3">Upgrade to Grade 3</string>
    <string name="upgrade_short_description">Please choose target user grade for Upgrade API</string>
    <string name="upgrade_validation_error_message">Please choose target user grade for Upgrade API</string>



</resources>
