<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/app_background"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"
      android:orientation="vertical">

    <TextView
        android:id="@+id/upgrade_short_description"
        android:text="@string/upgrade_short_description"
        android:background="@android:color/black"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <TextView
        android:id="@+id/currentGrade"
        android:text="@string/current_grade_prefix"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <RadioGroup
        android:id="@+id/gradeRadioGroup"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
      <RadioButton
          android:id="@+id/gradeRadio2"
          android:text="@string/grade_2"
          android:textColor="@android:color/black"
          android:checked="false"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          />

      <RadioButton
          android:id="@+id/gradeRadio3"
          android:text="@string/grade_3"
          android:textColor="@android:color/black"
          android:checked="false"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          />
    </RadioGroup>

    <Button
        android:id="@+id/upgradeButton"
        style="@style/content_slim"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/upgrade_button_text"/>
  </LinearLayout>

  <include
      android:id="@+id/statusBarBottom"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      layout="@layout/gree_status_bar"/>

</LinearLayout>
