<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/paymentAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/add_item" />

            <Button
                android:id="@+id/paymentRequestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/show_popup" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                style="@style/two_line_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/message" />

            <EditText
                android:id="@+id/paymentMessageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#646464"
            android:padding="2dp"
            android:text="@string/items_queued_for_purchase"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/paymentListView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="#ffffff"
            android:dividerHeight="1sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                style="@style/two_line_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/payment_id" />

            <TextView
                android:id="@+id/paymentVerifyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/paymentVerifyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/verify" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/statusBarBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/gree_status_bar" />

</LinearLayout>
